[package]
name = "rust-aha-cli"
version = "0.1.0"
authors = ["becker <github@deathbyescalator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html2md = {version="*", git="https://github.com/sbeckeriv/html2md"}
chrono ="*"
scarlet = "*"
tui = "0.9"
termion = "1.5"
rand = "0.7"
argh = "0.1"
dirs = "1"
url = "*"
toml = "*"
regex = "1"
failure = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "^0.9.0"
structopt = "0.2.10"
dotenv = "0.13.0"
envy = "0.3.2"
slog = "*"
slog-term = "*"
slog-async = "*"
text_io = "0.1"
